--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ header {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
   }
   
 /* Section One */
@@ -50,7 +55,7 @@ body {
       margin: 0;
   }
       .section-one {
-          background-color: #1f2937;
+          background: linear-gradient(to bottom, #1f2739 60%, #dddddd 100%);
           color: white;
           margin: 0;
           padding: 50px 30px;
@@ -75,11 +80,11 @@ body {
         .section-one button {
           font-size: 24px;
           padding: 10px 50px;
-          border: 4px solid #f9faf8;
+          border: 6px solid #f9faf8;
           background-color: #3882f6;
           font-family: Arial, Helvetica, sans-serif;
           color: white;
-          border-radius: 5px;
+          border-radius: 10px;
           cursor: pointer;
           margin-left: 20px;
           margin-top: 60px;
@@ -172,42 +177,65 @@ body {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
   }
-  .section-four {
+  #section-four {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #ffffff;
+    background: linear-gradient(to top, #c7c7c7 0%, #ffffff 100%);
+    color: rgba(255, 255, 255, 0.877);
+    margin: 0;
+    padding: 50px 30px;
+  }
+  
+  .frame {
+    box-shadow: 0 0 20px rgba(0,0,0,0.2), 0 0px 50px rgba(0,0,0,0.1) inset;
+    background-color: #48689786;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);    
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 600px;
+    max-height: 200px;
+    margin: 0 auto;
+    margin-bottom: 90px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: #ffffff;
+  }
+  .frame h4{
+    padding-bottom: -30px;
+    padding-top: -10px;
+  }
+.frame h3{
+  padding-bottom: -30px;
+  padding-top: -10px;
+  font-size: 30px;
+}
+
+  
+  
+  .blue-button {
+    background-color: #4867972a;
+    color: white;
+    border: 4px solid white;
+    border-radius: 5px;
+    padding: 10px 30px;
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .footer-text{
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    flex-direction: column;
+    align-items: center;
+    background-color: #5e5e5e;
     color: rgba(255, 255, 255, 0.877);
     margin: 0;
     padding: 50px 300px;
   }
-  .section-four h3{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-    font-size: 25;
-    color: #111111;
-    text-align: left;
-  }
-
-.section-four h4{
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bolder;
-  font-size: 25;
-  color: #111111;
-  text-align: left;
-}
-.section-four button {
-    font-size: 24px;
-    padding: 10px 50px;
-    border: 4px solid #f9faf8;
-    background-color: #3882f6;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 60px;
-    margin-bottom: 20px;
-  }
-
-
   
